Fixed portfolio text spacing

--- a/src/components/portfolio/Portfolio.css
+++ b/src/components/portfolio/Portfolio.css
@@ -23,7 +23,7 @@
 }
 
 .portfolio__item h3 {
-    margin: 1.2 0 2rem;
+    margin: 1rem 0rem 1rem;
 }
 
 .portfolio__item-cta {
